# judgment-cookbook

./: .env.example  .gitignore  CustomScorer.ipynb  CustomScorerJudgmentNotebook.ipynb  CustomScorerNotebook.ipynb  CustomScorerUpdated.ipynb  HumanEval_Code_Scorer.ipynb  HumanEval_Custom_Scorer.ipynb  HumanEval_Customer_Scorer.ipynb  JudgmentCustomScorer.ipynb  Online_Monitoring.py  Pipfile  PromptComparisonNotebook.ipynb  README.md  Research_Agent_Online_Monitoring.ipynb  Wikipedia_Racing_Agent.ipynb  humaneval_code_execution.py  pyproject.toml
cookbooks/: eval.py  simple_trace.py
cookbooks/anime_chatbot_agent/: animeChatBot.py
cookbooks/chatbot_RAG_agent/: agent.py
cookbooks/custom_scorers/: README.md  branding.py  code_style.py  code_style_scorer.py  cold_email.py  cold_email_scorer.py  pii_checker.py  text2sql.py
cookbooks/custum_scorers/: README.md  code_style_scorer.py  cold_email_scorer.py
cookbooks/features/: tagging.py
cookbooks/financial_agent/: demo.py
cookbooks/music_suggestion/: bot.py
cookbooks/new_bot/: basic_bot.py
cookbooks/openai_travel_agent/: agent.py
cookbooks/rules_alerts/: rules_bot.py
custom_scorers/: HumanEval_Custom_Scorer.ipynb
integrations/arize/: arize_cookbook.py
integrations/braintrust/: braintrust_cookbook.py
integrations/langchain/: client_wrap.py
integrations/langfuse/: langfuse_cookbook.py
monitoring/: Research_Agent_Online_Monitoring.ipynb  report_relevance_scorer.py
parrot_demo/: parrot_demo.py  summary_discharge.docx  summary_record.docx
prompt_comparisons/: Customer_Support_Agent.ipynb
(+52 files in other folders)
