[project]
name = "judgment-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.1.1",
    "fireworks-ai>=0.19.19",
    "human-eval>=1.0.3",
    "ipykernel>=6.30.1",
    "judgeval>=0.11.0",
    "numpy>=2.3.3",
    "openai>=1.107.3",
    "requests>=2.32.5",
    "wikipedia>=1.4.0",
]
